--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,21 @@
 [tool.poetry]
 name = "c2"
 version = "0.1.0"
-description = ""
-authors = ["domainio <innovaterz@gmail.com>"]
+description = "ETL workflow project using Prefect"
+authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.9"
+prefect = "^3.1.2"
+python-dotenv = "^1.0.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+etl = "c2.main:my_etl_flow"
