--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.9"
 prefect = "^3.1.2"
 python-dotenv = "^1.0.1"
+aiohttp = "^3.8.4"
+beautifulsoup4 = "^4.12.0"
+asyncio = "^3.4.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
@@ -18,4 +21,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-etl = "c2.main:my_etl_flow"
+etl = "c2.main:etl_flow"
+crawl = "c2.main:run_crawler"
