--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "c2"
 version = "0.1.0"
-description = "ETL workflow project using Prefect"
+description = "Web crawler project using Prefect"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
+package-mode = false  # Disable package mode since we're not creating a package
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -20,3 +21,5 @@ pytest = "^7.0.0"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry.scripts]
+crawl = "main:run_crawler"
