--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ beautifulsoup4 = "^4.12.0"
 asyncio = "^3.4.3"
 pandas = "^2.1.0"
 tabulate = "^0.9.0"
+click = "^8.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
